# formal_practice

./: CMakeLists.txt  README.md
src/: Max_substring.cpp  Max_substring.h
tests/: local_test.cpp  tests.cpp
